--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@ button:hover {
 button:active {
     box-shadow:  inset 2px 2px 2px;
 }
-.staus-display {
+.status-display {
     height: 20px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 /* main */
